new proj/src/objects/GE_ES_PL__c.object
<CustomObject>
    <description>P&amp;L (GE Business Unit) This is created for the R Process functionality</description>
    <fields>
        <fullName>Business_Tier_Text__c</fullName>
        <label>Business Tier Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Record_Type_Name__c</fullName>
        <description>The name of the Opportunity record type that maps to this P&amp;L.  This is used by the Apex Trigger &quot;Populate_PL_lookup&quot; to determine which P&amp;L is assigned to the Opportunity based on the Record Type selected</description>
        <inlineHelpText>The name of the Opportunity record type that maps to this P&amp;L.  This is used by the Apex Trigger &quot;Populate_PL_lookup&quot; to determine which P&amp;L is assigned to the Opportunity based on the Record Type selected</inlineHelpText>
        <label>Opportunity Record Type Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_Is_Current_Risk_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this Current Risk Checklist ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Standard_Terms_Question__c</fullName>
        <label>Standard Term Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>P&amp;L</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_Opportunity_Record_Type_Name__c</columns>
        <columns>GE_ES_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Business_Tier_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>P&amp;L Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P&amp;Ls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>